# FUNDA

./: README.md
ПАК 2/lab 1/: CMakeLists.txt  func.c  func.h  main.c
ПАК 2/lab2/: CMakeLists.txt  f2unc.c  func.c  func.h  main.c
ПАК 2/lab5/: CMakeLists.txt  input.txt  main.c  output.txt
ПАК 2/lab5/include/: func.h
ПАК 2/lab5/src/: func.c
ПАК 2/lab6/: CMakeLists.txt  func.c  func.h  main.c  students.txt
